// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BreadCrumb /> snapshots Dont't have arrow before first item 1`] = `
<div
  className="customBreadcrumb text-center"
>
  <span
    className="navbar-text"
  >
    <span
      className="child"
    >
      Content
    </span>
  </span>
  <span
    className="navbar-text px-2 icon"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 256 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
      />
    </svg>
  </span>
  <span
    className="navbar-text"
  >
    <a
      className="parent text__animation"
      href="/content/shows"
      onClick={[Function]}
    >
      Shows
    </a>
  </span>
</div>
`;

exports[`<BreadCrumb /> snapshots Have arrow before first item 1`] = `
<div
  className="customBreadcrumb text-center"
>
  <span
    className="navbar-text px-2"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 256 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
      />
    </svg>
  </span>
  <span
    className="navbar-text"
  >
    <span
      className="child"
    >
      Content
    </span>
  </span>
  <span
    className="navbar-text px-2 icon"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 256 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
      />
    </svg>
  </span>
  <span
    className="navbar-text"
  >
    <a
      className="parent text__animation"
      href="/content/schedules"
      onClick={[Function]}
    >
      Schedules
    </a>
  </span>
</div>
`;
